# slurm

./: .gitignore  LICENSE  _config.yml  pyproject.toml  readme.md
.github/workflows/: codeql-analysis.yml  python.yaml
archive/: circular_buffer.py
cpp/: CMakeLists.txt  readme.md
cpp/examples/: CMakeLists.txt  main.cpp
cpp/gtests/: CMakeLists.txt  main-gtest.cpp
cpp/src/: colors.hpp  event.hpp  files.hpp  logger.hpp  rate.hpp  signals.hpp  slurm.hpp  time.hpp  units.hpp
dev/yaml/: t.yaml  test.py
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/circular_buffer/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/constants/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/files/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/googledrive/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/network/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/rate/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/sig/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/simple_process/: index.doctree
docs/_build/html/.doctrees/autoapi/slurm/storage/: index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/slurm/: circular_buffer.html  files.html  googledrive.html  network.html  rate.html  sig.html  simple_process.html  storage.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/circular_buffer/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/constants/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/files/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/googledrive/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/network/: index.rst.txt
docs/_build/html/_sources/autoapi/slurm/rate/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/slurm/: index.html
docs/_build/html/autoapi/slurm/circular_buffer/: index.html
docs/_build/html/autoapi/slurm/constants/: index.html
docs/_build/html/autoapi/slurm/files/: index.html
docs/_build/html/autoapi/slurm/googledrive/: index.html
docs/_build/html/autoapi/slurm/network/: index.html
docs/_build/html/autoapi/slurm/rate/: index.html
docs/_build/html/autoapi/slurm/sig/: index.html
docs/_build/html/autoapi/slurm/simple_process/: index.html
docs/_build/html/autoapi/slurm/storage/: index.html
docs/sphinx/: conf.py  index.rst
python/: pyproject.toml  readme.md
python/slurm/: sig.py  simple_process.py  storage.py
slurm/: __init__.py  circular_buffer.py  constants.py  files.py  googledrive.py  modules.py  network.py  rate.py  scistorage.py  sig.py  simple_process.py  simple_thread.py  storage.py
tests/: test_slurm.py
(+3 files in other folders)
