[tool.poetry]
name = "slurm"
version = "0.4.6"
description = "A bunch tools I have created over the years"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/slurm/"
repository = 'https://github.com/MomsFriendlyRobotCompany/slurm'
# documentation = "http://..."
keywords = ['fun']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.dependencies]
python = ">=3.6"
simplejson = "*"
requests = "*"
pyyaml = "*"
colorama = "*"
importlib-metadata = {version="*", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
